--- a/modules/web-control-center/src/main/js/views/configuration/metadata.jade
+++ b/modules/web-control-center/src/main/js/views/configuration/metadata.jade
@@ -42,7 +42,7 @@ block content
             i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
         .panel-group(bs-collapse ng-model='panels.activePanel' data-allow-multiple="false")
-            .panel.panel-default
+            .panel.panel-default(ng-show='selectedItem || backupItem')
                 .panel-heading
                     h3
                         a(bs-collapse-toggle) Manual
