--- a/modules/web-control-center/src/main/js/views/templates/layout.jade
+++ b/modules/web-control-center/src/main/js/views/templates/layout.jade
@@ -49,7 +49,7 @@ html(ng-app='ignite-web-control-center', ng-init='user = #{JSON.stringify(user)}
             script(src='/common-module.js')
             script(src='/data-structures.js')
 
-    body.theme-line.body-overlap
+    body.theme-line.body-overlap.greedy
         .wrapper
             include ../includes/header
 
