--- a/modules/web-control-center/src/main/js/views/sql/sql.jade
+++ b/modules/web-control-center/src/main/js/views/sql/sql.jade
@@ -42,9 +42,9 @@ block container
                                 'rendererOptions: {showPrintMargin: false, highlightGutterLine: false, fontSize: 14},' +
                                 'advanced: {enableSnippets: false, enableBasicAutocompletion: true, enableLiveAutocompletion: true}}' ng-model='#{tab}.query')
                         .col-sm-3
-                            .links(ng-hide='caches.length == 0' style='margin-top: 0.65em')
+                            div(ng-hide='caches.length == 0' style='margin-top: 0.65em')
                                 lable.labelHeader Caches:
-                                table(st-table='caches')
+                                table.links(st-table='caches')
                                     tbody
                                         tr(ng-repeat='row in caches track by row._id')
                                             td.col-sm-6(ng-class='{active: row._id == #{tab}.selectedItem._id}')
@@ -78,5 +78,8 @@ block container
                                     tr
                                         th(ng-repeat='column in #{tab}.cols' st-sort='{{column}}') {{column}}
                                 tbody
+                                    //tr
+                                    //    td(colspan='{{#{tab}.cols.length}}')
+                                    //        .loading-indicator
                                     tr(ng-repeat='row in rows')
                                         td(ng-repeat="column in #{tab}.cols") {{row[column]}}
