IGNITE-843: WIP Generate cache type metadata configs + typeahead for java types + minor fixes.

--- a/modules/web-control-center/src/main/js/views/configuration/clusters.jade
+++ b/modules/web-control-center/src/main/js/views/configuration/clusters.jade
@@ -51,7 +51,7 @@ block content
                         .panel-body
                             .settings-row(ng-repeat='field in general')
                                 +form-row
-            .panel-group(bs-collapse data-allow-multiple="true")
+            .panel-group(bs-collapse data-allow-multiple='true')
                 div(bs-collapse data-start-collapsed='true')
                     .panel-title(ng-show='expanded')
                         h3
