--- a/modules/web-control-center/src/main/js/views/settings/admin.jade
+++ b/modules/web-control-center/src/main/js/views/settings/admin.jade
@@ -53,6 +53,6 @@ block container
                                     i.fa.fa-eye
                     tfoot
                         tr
-                            td(colspan='5' class="text-right")
+                            td.text-right(colspan='5')
                                 div(st-pagination st-items-by-page='15' st-displayed-pages='5')
 
