--- a/modules/web-control-center/src/main/js/views/settings/profile.jade
+++ b/modules/web-control-center/src/main/js/views/settings/profile.jade
@@ -42,7 +42,7 @@ block container
                         .details-row
                             .checkbox
                                 label
-                                    input(type="checkbox" ng-model='profileUser.changePassword')
+                                    input(type='checkbox' ng-model='profileUser.changePassword')
                                     | Change password
                         div(ng-show='profileUser.changePassword')
                             .details-row
