--- a/modules/web-control-center/src/main/js/views/templates/confirm.jade
+++ b/modules/web-control-center/src/main/js/views/templates/confirm.jade
@@ -18,10 +18,10 @@
     .modal-dialog
         .modal-content
             .modal-header
-                button.close(type="button" ng-click="$hide()") &times;
+                button.close(type='button' ng-click='$hide()') &times;
                 h4.modal-title Confirmation
             .modal-body(ng-show='content')
                 p(ng-bind-html='content' style='text-align: center;')
             .modal-footer
-                button.btn.btn-default(type="button" ng-click="$hide()") Cancel
-                button.btn.btn-primary(type="button" ng-click="ok()") Confirm
+                button.btn.btn-default(type='button' ng-click='$hide()') Cancel
+                button.btn.btn-primary(type='button' ng-click='ok()') Confirm
