--- a/modules/web-control-center/src/main/js/views/templates/copy.jade
+++ b/modules/web-control-center/src/main/js/views/templates/copy.jade
@@ -18,14 +18,14 @@
     .modal-dialog
         .modal-content
             .modal-header
-                button.close(type="button" ng-click="$hide()") &times;
+                button.close(type='button' ng-click='$hide()') &times;
                 h4.modal-title Copy
             form.form-horizontal(name='inputForm' novalidate)
                 .modal-body.row
                     .col-sm-9.login.col-sm-offset-1
                         label.required.labelFormField() New name:&nbsp;
                         .col-sm-9
-                            input.form-control(type="text" ng-model='newName' required)
+                            input.form-control(type='text' ng-model='newName' required)
             .modal-footer
-                button.btn.btn-default(type="button" ng-click="$hide()") Cancel
-                button.btn.btn-primary(type="button" ng-disabled='inputForm.$invalid' ng-click="ok(newName)") Confirm
+                button.btn.btn-default(type='button' ng-click='$hide()') Cancel
+                button.btn.btn-primary(type='button' ng-disabled='inputForm.$invalid' ng-click='ok(newName)') Confirm
