--- a/modules/web-control-center/src/main/js/views/sql/sql.jade
+++ b/modules/web-control-center/src/main/js/views/sql/sql.jade
@@ -82,4 +82,4 @@ block container
                                     //    td(colspan='{{#{tab}.cols.length}}')
                                     //        .loading-indicator
                                     tr(ng-repeat='row in rows')
-                                        td(ng-repeat="column in #{tab}.cols") {{row[column]}}
+                                        td(ng-repeat='column in #{tab}.cols') {{row[column]}}
